Add paragraph in home.html

--- a/templates/home.html
+++ b/templates/home.html
@@ -11,6 +11,7 @@
     <textarea cols="50" rows="10" name="usertext">    </textarea>
     <br><br>
     <input type="submit" value="Reverse!">
+    <p>qweqe qeqw e qe qwe</p>
 </form>
 </body>
 </html>
