--- a/templates/home.html
+++ b/templates/home.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
@@ -7,7 +7,7 @@
 <body>
 <h1>This is home page!</h1>
 {{greeting}}
-<form>
+<form action="{% url 'reverse' %}">
     <textarea cols="50" rows="10" name="usertext">    </textarea>
     <br><br>
     <input type="submit" value="Reverse!">
