Add words count

--- a/templates/reverse.html
+++ b/templates/reverse.html
@@ -5,7 +5,10 @@
     <title>Title</title>
 </head>
 <body>
+<h1>Original text has {{lentext}} words!</h1>
+{{reversedtext}}
 <h1>Reversed text!</h1>
 {{usertext}}
+
 </body>
 </html>
